fixed button spacing

--- a/react-vite/src/components/SignupFormModal/SignupForm.css
+++ b/react-vite/src/components/SignupFormModal/SignupForm.css
@@ -7,11 +7,10 @@
     background-color: rgb(0, 0, 0);
     text-align: center;
     height: 95vh;
-    overflow: scroll;
-    scroll-behavior: smooth;
-    scrollbar-width: none;
-    padding-bottom: 1rem;
+
     position: relative;
+    padding-bottom: 4rem;
+
 
 
 }
@@ -21,7 +20,6 @@
     color: white;
     width: 95%;
     margin: 0 auto;
-
 
 
 }
@@ -59,7 +57,7 @@ transition: outline-color 0.3s ease
     background-color: rgb(252, 54, 202);
     border: 2px solid white;
     width: 80%;
-    margin: 0 auto;
+    margin: 5% auto;
     cursor: pointer;
 
 
@@ -77,6 +75,7 @@ transition: outline-color 0.3s ease
 .subscription-container {
     display: grid;
     width: 100%;
+
 
 }
 
@@ -130,6 +129,7 @@ transition: outline-color 0.3s ease
         width: 100%;
         height: 100%;
         position: static;
+
     }
 
     #close-text {
